k8s/manifests/redis-stateful.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: sns
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  replicas: 3
  template:
    metadata:
      labels:
        app: redis
    spec:
      serviceAccountName: sa-nomount
      securityContext:
        runAsUser: 1000591000
        fsGroup: 1000590000
        runAsGroup: 1000590000
      containers:
      - name: redis
        image: redis:6.0.4-alpine
        args: 
          - "/usr/local/etc/redis/redis.conf"
          - "--appendonly"
          - "yes"
        securityContext:
          runAsUser: 1000591000
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false  
        ports:
        - containerPort: 6379
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
        volumeMounts:
        - name: conf
          mountPath: "/usr/local/etc/redis"
        - name: redis-data
          mountPath: "/data"
      volumes:
      - name: conf
        secret:
          secretName: redis-conf
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: gp2
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: sns
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  clusterIP: None
  selector:
    app: redis
