k8s/manifests/subscription.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription
  namespace: sns
  labels:
    app: subscription
spec:
  selector:
    matchLabels:
      app: subscription
  replicas: 1
  template:
    metadata:
      labels:
        app: subscription
    spec:
      containers:
      - name: subscription
        image: lmtbelmonte/sns-subscription:v1.0.1
        securityContext:
          runAsUser: 1000591000
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 3001
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            cpu: 250m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /probes/liveness
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /probes/readiness
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 30
        volumeMounts:
        - name: subscription-config
          mountPath: "/opt/sns/config"
      volumes:
      - name: subscription-config
        configMap:
          name: subscription-config
---
apiVersion: v1
kind: Service
metadata:
  name: subscription
  namespace: sns
  labels:
    app: subscription
spec:
  ports:
  - port: 3001
    targetPort: 3001
  selector:
    app: subscription
